--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "dependencies": {
     "emotion": "^9.2.12",
     "react": "^16.6.1",
+    "react-app-rewired": "^1.6.2",
     "react-dom": "^16.6.1",
     "react-emotion": "^9.2.12",
     "react-scripts": "2.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "posttest": "yarn lint && yarn prettier:test",
-    "eject": "react-scripts eject",
+    "eject": "react-app-rewired eject",
     "prettier": "prettier --write \"{src,cypress}/**/*.{js,jsx,ts,tsx,css,scss,vue,json,graphql,md,yaml}\" \"*.{js,jsx,ts,tsx,css,scss,vue,json,graphql,md,yaml}\"",
     "prettier:test": "yarn prettier --list-different",
     "lint": "eslint --ignore-path ./.eslintignore --ext .jsx --ext .js, ./"
@@ -36,6 +37,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
-    "prettier": "^1.15.1"
+    "prettier": "^1.15.1",
+    "react-app-rewire-emotion": "^4.0.0"
   }
 }
