--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "react-app-rewired": "^1.6.2",
     "react-dom": "^16.6.1",
     "react-emotion": "^9.2.12",
-    "react-scripts": "2.1.1"
+    "react-redux": "^5.1.0",
+    "react-scripts": "2.1.1",
+    "redux": "^4.0.1",
+    "redux-devtools": "^3.4.1",
+    "redux-logger": "^3.0.6"
   },
   "scripts": {
     "start": "react-app-rewired start",
