--- a/package.json
+++ b/package.json
@@ -12,17 +12,19 @@
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
     "redux-devtools": "^3.4.1",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "singel": "^0.5.4"
   },
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "posttest": "yarn lint && yarn prettier:test",
+    "posttest": "yarn lint && yarn prettier:test && singel",
     "eject": "react-app-rewired eject",
     "prettier": "prettier --write \"{src,cypress}/**/*.{js,jsx,ts,tsx,css,scss,vue,json,graphql,md,yaml}\" \"*.{js,jsx,ts,tsx,css,scss,vue,json,graphql,md,yaml}\"",
     "prettier:test": "yarn prettier --list-different",
-    "lint": "eslint --ignore-path ./.eslintignore --ext .jsx --ext .js, ./"
+    "lint": "eslint --ignore-path ./.eslintignore --ext .jsx --ext .js, ./",
+    "singel": "singel components/common/*.js"
   },
   "eslintConfig": {
     "extends": "react-app"
