--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "redux": "^4.0.1",
     "redux-devtools": "^3.4.1",
     "redux-logger": "^3.0.6",
+    "redux-pack": "^0.1.5",
     "singel": "^0.5.4"
   },
   "scripts": {
