--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "singel": "^0.5.4"
   },
   "scripts": {
-    "start": "react-app-rewired start",
+    "start": "nf start",
+    "start:front-end": "react-app-rewired start",
     "start:mock-api": "npx json-server --config src/mock/json-server src/mock/db.json",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
